--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -49,6 +49,7 @@ nav:
           - articles/knative-v0-3-autoscaling-a-love-story.md
           - articles/ko-fast-kubernetes-microservice-development-in-go.md
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
+          - articles/performance-test-with-slos.md
       - Steering Committee:
           - steering/toc-2022-election-announcement.md
           - steering/2022-04-14-annual-report-2021.md
