General cleanup of sample and ref docs

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -236,10 +236,8 @@ nav:
       - Eventing code samples: samples/eventing.md
     # Reference docs
     - Reference:
-      - Reference overview: reference/README.md
-      - API:
-        - Serving: reference/api/serving-api.md
-        - Eventing: reference/api/eventing-api.md
+      - Serving API: reference/api/serving-api.md
+      - Eventing API: reference/api/eventing-api.md
       - Client: reference/client/README.md
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
