Blog article on performance testing of Knative services (#5115)
* adding blog article for performance testing

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* removing .venv

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* fixing image paths

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* fixing trailing space

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* images in the right places

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* fix pic and links and formatting

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* fixed images

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

* fix older tutorial

Signed-off-by: Srinivasan Parthasarathy <spartha@us.ibm.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -38,6 +38,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/performance-test-with-slos.md
           - articles/workflow-as-function-flow.md
           - articles/highlighting-value-knative-c-suite.md
           - articles/quickstart-with-knative.md
