--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,8 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.snippets:
       base_path: docs/snippets
+      url_download: true
+      check_paths: true
   - pymdownx.keys
   - pymdownx.caret
   - pymdownx.mark
