General cleanup of sample and ref docs (#5117)
* General cleanup of sample and ref docs

* move reference docs

* fix nav and links

* update redirects

* fix comment

* added Paul's script updates, updating ext versions

--- a/config/redirects.yml
+++ b/config/redirects.yml
@@ -1,9 +1,12 @@
 plugins:
   redirects:
     redirect_maps:
-      community/contributing.md : contributing/contributing.md
-      community/about.md : contributing/about.md
-      community/README.md : contributing/README.md
+      reference/client/README.md: client/README.md
+      reference/api/eventing-api.md: eventing/reference/eventing-api.md
+      reference/api/serving-api.md: serving/reference/serving-api.md
+      community/contributing.md: contributing/contributing.md
+      community/about.md: contributing/about.md
+      community/README.md: contributing/README.md
       eventing/getting-started.md: getting-started/getting-started-eventing.md
       admin/collecting-logs/README.md: serving/observability/logging/collecting-logs.md
       admin/collecting-metrics/README.md: serving/observability/metrics/collecting-metrics.md
