remove fluff, editing of content

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -12,9 +12,9 @@ nav:
         - Tutorial introduction: getting-started/README.md
         - Install Knative using quickstart: getting-started/quickstart-install.md
         - Using Knative Serving:
-          - First Knative Service: getting-started/first-service.md
-          - Scaling to Zero: getting-started/first-autoscale.md
-          - Traffic Splitting: getting-started/first-traffic-split.md
+          - Deploying a Knative Service: getting-started/first-service.md
+          - Scaling to zero: getting-started/first-autoscale.md
+          - Traffic splitting: getting-started/first-traffic-split.md
         - Using Knative Eventing:
           - Introducing Knative Eventing: getting-started/getting-started-eventing.md
           - Sources, Brokers, Triggers, Sinks: getting-started/first-broker.md
