--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -38,6 +38,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/eventing-rabbitmq-announcement.md
           - articles/performance-test-with-slos.md
           - articles/workflow-as-function-flow.md
           - articles/highlighting-value-knative-c-suite.md
