--- a/code-samples/community/serving/helloworld-dart/pubspec.yaml
+++ b/code-samples/community/serving/helloworld-dart/pubspec.yaml
@@ -2,7 +2,7 @@ name: hello_world_dart
 publish_to: none # let's not accidentally publish this to pub.dartlang.org
 
 environment:
-  sdk: ">=2.18.0-165.1.beta <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   args: ^2.0.0
