--- a/code-samples/community/serving/helloworld-dart/pubspec.yaml
+++ b/code-samples/community/serving/helloworld-dart/pubspec.yaml
@@ -2,7 +2,14 @@ name: hello_world_dart
 publish_to: none # let's not accidentally publish this to pub.dartlang.org
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  shelf: ^1.0.0
+  args: ^2.0.0
+  shelf: ^1.1.0
+  shelf_router: ^1.0.0
+
+dev_dependencies:
+  http: ^0.13.0
+  lints: ^2.0.0
+  test: ^1.15.0
