--- a/config/nav.yml
+++ b/config/nav.yml
@@ -103,6 +103,7 @@ nav:
           - Configuring certificate class: serving/services/certificate-class.md
           - Configuring custom domains: serving/services/custom-domains.md
           - Using a custom TLS certificate for DomainMapping: serving/services/byo-certificate.md
+          - Using extensions enabled by QPOptions: serving/services/using-queue-extensions.md
           # TODO: Add security section to docs?
           - Configure resource requests and limits: serving/services/configure-requests-limits-services.md
           - HTTPS redirection: serving/services/http-protocol.md
@@ -126,6 +127,7 @@ nav:
         - Configuring the ingress gateway: serving/setting-up-custom-ingress-gateway.md
         - Configuring domain names: serving/using-a-custom-domain.md
         - Converting a Kubernetes Deployment to a Knative Service: serving/convert-deployment-to-knative-service.md
+        - Extending Queue Proxy image with QPOptions: serving/queue-extensions.md
         # Serving config
         - Serving configuration:
           - Configure Deployment resources: serving/configuration/deployment.md
