--- a/config/nav.yml
+++ b/config/nav.yml
@@ -17,7 +17,8 @@ nav:
     # Getting started
 ###############################################################################
     - Tutorials:
-        - Install Knative with the Quickstart plugin: tutorials/quickstart-install/README.md
+        - Using the Quickstart plugin:
+          - Install Knative with the Quickstart plugin: tutorials/quickstart-install/README.md
           - Getting started with Knative Serving:
             - Deploying a Knative Service: getting-started/first-service.md
             - Autoscaling: getting-started/first-autoscale.md
